--- a/Devils_Ivy.css
+++ b/Devils_Ivy.css
@@ -10,17 +10,16 @@
 
 li,
 a {
-  font-family: "Montserrat";
+  font-family: "Black Han Sans", sans-serif;
   font-size: 16px;
   font-weight: 500;
   color: whitesmoke;
   text-decoration: none;
 }
 
-.link{
- max-width:10px;
+.link {
+  max-width: 10px;
 }
-
 
 header {
   display: flex;
@@ -46,6 +45,7 @@ header {
 }
 
 .nav_links {
+  display: flex;
   list-style: none;
 }
 
@@ -105,9 +105,8 @@ footer {
   bottom: 0;
   left: 0;
   right: 0;
-  height: 25px;
+  height: auto;
   width: 100vw;
-  padding-top: 40px;
   color: white;
 }
 
@@ -117,6 +116,7 @@ footer {
   justify-content: center;
   flex-direction: column;
   text-align: center;
+  margin-top: 100px;
 }
 
 .footer-content h3 {
@@ -127,7 +127,7 @@ footer {
 }
 
 .footer-content p {
-  max-width: 500px;
+  max-width: 100%;
   margin: 10px auto;
   line-height: 28px;
   font-size: 14px;
@@ -163,13 +163,17 @@ footer {
 /* Mobile Styles*/
 
 @media (max-width: 480px) {
+  header {
+    padding: 0;
+  }
+
   .navbar {
     flex-direction: column;
-    padding: 20px 30px;
+    padding: 20px;
     width: 100%;
     margin-bottom: 40px;
   }
- 
+
   .logo {
     height: auto;
     margin: 0;
@@ -177,7 +181,6 @@ footer {
   }
   .nav_links {
     display: none;
-    list-style: none;
     width: 100%;
     text-align: center;
     padding-top: 10px;
@@ -217,18 +220,43 @@ footer {
 
   .beer_title {
     font-size: 40px;
-    padding-bottom: 30px;
+    padding-bottom: 0px;
     font-family: "Black Han Sans", sans-serif;
   }
 
   #BC {
-    margin-top: 40px;
+    padding: 40px;
+  }
+
+  .footer-content {
+    margin: 0px;
   }
 }
-@media (min-width:481px) and (max-width:768px){
 
- 
+@media (min-width: 481px) and (max-width: 860px) {
+  .container {
+    margin-left:0px;
+    padding:30px;
+    flex: 1;
+    gap: 0;
+  }
 
+  .beer_title {
+    font-size: 40px;
+  }
+  .nav_links li {
+    font-family: "Black Han Sans", sans-serif;
+    color: red;
+  }
+  
+  .footer-content {
+    margin: 0;
+  }
 
-
+.text{
+  font-size: 20px;
+}
+.image{
+  width: 50%;
+}
 }
